--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
           <a href="#"> <button id="instagram" class="btn btn-lg btn-block">  <i class="fab fa-instagram"></i> Siga nosso perfil </button> </a> 
         </div> 
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12"> 
-          <a href="#"> <button id="facebook" class="btn btn-lg btn-block"> <i class="fab fa-facebook"></i> Curta nossa pagina </button> </a> 
+          <a href="https://www.facebook.com/Classicbeauty32"> <button id="facebook" class="btn btn-lg btn-block"> <i class="fab fa-facebook"></i> Curta nossa pagina </button> </a> 
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12"> 
-          <a href="#"> <button id="whatsapp" class="btn btn-lg btn-block"> <i class="fab fa-whatsapp"></i> Fale com a gente </button> </a> 
+          <a href="https://api.whatsapp.com/send?phone=5512991970130"> <button id="whatsapp" class="btn btn-lg btn-block"> <i class="fab fa-whatsapp"></i> Fale com a gente </button> </a> 
         </div> 
       </div>
 
