Add price on navbar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a class="link nav-item nav-link pr-md-3 text-center" href="#servicos"> <i class="fas fa-handshake"></i> Serviços</a>
             <a class="link nav-item nav-link pr-md-3 text-center" href="#galeria"> <i class="fas fa-images"></i> Fotos</a>
             <a class="link nav-item nav-link pr-md-3 text-center" href="#localizacao"> <i class="fas fa-map-marker-alt"></i> Localização</a>
+            <a class="link nav-item nav-link pr-md-3 text-center" href="#precos"> <i class="fas fa-money-bill-wave"></i> Preços </a>
             <a class="link nav-item nav-link pr-md-3 text-center" href="#sobre"> <i class="fas fa-address-book"></i> Sobre</a>
           </div>
         </div>
