Ajust on title of div

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         <div class="col-md-4 mb-3">
           <div class="text-center bg-white p-3 table-pricing">
-              <h5 class="text-uppercase">Manicure</h5>
+              <h5 class="text-uppercase">Pedicure</h5>
               <i class="flaticon-pedicure"></i>
               <h1>20R$</h1>
               <span class="d-block">Esmaltação: <b>10R$</b></span>
